// Copyright (c) 2018 ContentBox Authors.
// Use of this source code is governed by a MIT-style
// license that can be found in the LICENSE file.

syntax = "proto3";
package corepb;

option java_package = "one.contentbox.boxd.proto";
option java_outer_classname ="TrieProto";
option java_multiple_files = true;

message Node {
    repeated bytes value = 1;
}